# led-matrix-games

./: .gitattributes  LICENSE  README.md  build.sh  create_image.sh  index.html  params.json
downloads/: rpi_sdcard.img
led-matrix-games/: CMakeLists.txt  build.sh
led-matrix-games/config/: led_games.ini
led-matrix-games/games/: demo.lua  menu.lua  snake.lua  test.lua  tetris.lua  tetrives.lua
led-matrix-games/games/lib/: chars.lua  tools.lua
led-matrix-games/include/: Display.h
led-matrix-games/include/control/: Gamepad.h
led-matrix-games/include/control_server/: ControlServer.h
led-matrix-games/include/game_engine/: EffectDefinition.h  GameEngine.h
led-matrix-games/include/led_device/: LedDevice.h  LedDeviceFactory.h
led-matrix-games/include/utils/: ColorRgb.h  DelegateArgs.h  HsvTransform.h  PixelFormat.h  RgbChannelTransform.h  Screen.h
led-matrix-games/libsrc/: CMakeLists.txt
led-matrix-games/libsrc/control/: CMakeLists.txt  Gamepad.cpp
led-matrix-games/libsrc/control_server/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  ControlServer.cpp
led-matrix-games/libsrc/game_engine/: CMakeLists.txt  Game.cpp  Game.h  GameEngine.cpp
led-matrix-games/libsrc/led_device/: CMakeLists.txt  LedDevice.cpp  LedDeviceFactory.cpp  LedDeviceTpm2Serial.cpp  LedDeviceTpm2Serial.h  LedDeviceTpm2TcpSocket.cpp  LedDeviceTpm2TcpSocket.h  LedRs232Device.cpp  LedRs232Device.h  TcpSocketDevice.cpp  TcpSocketDevice.h
led-matrix-games/libsrc/utils/: CMakeLists.txt  HsvTransform.cpp  RgbChannelTransform.cpp
led-matrix-games/patches/lua/: CMakeLists.txt
led-matrix-games/patches/serial/: CMakeLists.txt
led-matrix-games/src/: CMakeLists.txt  led_games.cpp
led-matrix-games/www/: index.css  index.html  index.js
patches/buildroot/: .config  .linux_config  post-build.sh
patches/buildroot/rootfs-additions/etc/: dnsd.conf  hostapd.conf  iptables.rules
patches/buildroot/rootfs-additions/etc/dhcp/: dhcpd.conf
patches/buildroot/rootfs-additions/etc/init.d/: S85dnsd  S90hostapd  S99games
patches/buildroot/rootfs-additions/etc/network/: interfaces
patches/buildroot/rootfs-additions/var/www/data/: index.html
patches/buildroot/rootfs-additions/var/www/data/errors/: err404.html
stylesheets/: stylesheet.css
